--- a/simplefootstepsredux/simplefootstepsredux.csproj
+++ b/simplefootstepsredux/simplefootstepsredux.csproj
@@ -53,6 +53,7 @@
   <Content Include="assets\**">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
   </Content>
+  <None Remove="assets\simplefootstepsredux\config\soundentries.json" />
   <Content Include="modinfo.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
   </Content>
