--- a/simplefootstepsredux/simplefootstepsredux.csproj
+++ b/simplefootstepsredux/simplefootstepsredux.csproj
@@ -54,6 +54,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
   </Content>
   <None Remove="assets\simplefootstepsredux\config\soundentries.json" />
+  <None Remove="assets\simplefootstepsredux\sounds\creature\steps\eject.ogg" />
   <Content Include="modinfo.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
   </Content>
